--- a/ios-steamguard-extractor/packages.config
+++ b/ios-steamguard-extractor/packages.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Costura.Fody" version="1.3.3.0" targetFramework="net452" developmentDependency="true" />
+  <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
   <package id="Fody" version="1.29.4" targetFramework="net452" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="plist-cil" version="1.14" targetFramework="net452" />
+  <package id="System.Data.SQLite" version="1.0.104.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.104.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.EF6" version="1.0.104.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.Linq" version="1.0.104.0" targetFramework="net452" />
 </packages>
